scss/partials/_emoji_picker.scss
$picker_height: 421;
$picker_width: 338;

div.emoji-picker {
  z-index: #{$navbar_zindex - 1};
  position: relative;

  button.emoji-button{
    padding: 1px 0 0 0;
    width: 25px;
    height: 24px;
    @include image-2x("/img/ML/new_post_emoji_button");
    background-size: 20px 20px;
    background-position: center;
    background-position: 50%;
    background-repeat: no-repeat;
    opacity: 0.8;

    &:hover {
      opacity: 1;
    }

    &:disabled {
      opacity: 0.2;
    }
  }

  .emoji-dialog .modifiers {
    display: none;
  }

  div.picker-container {
    position: absolute;
    display: block;

    &.top {
      top: -#{$picker_height + 8}px;
    }

    &.bottom {
      top: 0px;
    }
  }
}

// Override emoji-mart.css

div.emoji-mart {
  border: 1px solid rgba($deep_tan, 0.7);
  box-shadow: 0px 2px 4px 0px rgba($deep_tan, 0.8);
  border-radius: 6px;
  div.emoji-mart-preview {
    div.emoji-mart-preview-data span.emoji-mart-title-label {
      display: none;
    }
  }
}

