Fix emoji-picker button z-index to avoid showing it above the dropdown menu.

--- a/scss/partials/_emoji_picker.scss
+++ b/scss/partials/_emoji_picker.scss
@@ -2,7 +2,7 @@ $picker_height: 421;
 $picker_width: 338;
 
 div.emoji-picker {
-  z-index: #{$navbar_zindex - 1};
+  z-index: 99;
   position: relative;
 
   button.emoji-button{
@@ -49,6 +49,8 @@ div.emoji-mart {
   border: 1px solid rgba($deep_tan, 0.7);
   box-shadow: 0px 2px 4px 0px rgba($deep_tan, 0.8);
   border-radius: 6px;
+  z-index: #{$navbar_zindex - 1};
+
   div.emoji-mart-preview {
     div.emoji-mart-preview-data span.emoji-mart-title-label {
       display: none;
